Fix PIN status bar alignment

--- a/client/styles/cards/card-piv.less
+++ b/client/styles/cards/card-piv.less
@@ -135,4 +135,19 @@
 
   }
 
+  .status-wrapper {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    @media (max-width: 1206px) {
+      justify-content: center;
+    }
+
+    .pin-check-status {
+      margin-left: 0;
+    }
+  }
+
 }
